Polished src/download.py (previously src/prep.py)

--- a/conda.yaml
+++ b/conda.yaml
@@ -112,5 +112,7 @@ dependencies:
   - yaml=0.1.7=h14c3975_1001
   - zlib=1.2.11=h14c3975_1004
   - zstd=1.4.0=h3b9ef0a_0
+  - pip:
+    - googledrivedownloader==0.4
 prefix: /home/mlaradji/.conda/envs/aiptask.AttnGAN
 
