--- a/cfg/birds/eval_bird_attnDCGAN2.yml
+++ b/cfg/birds/eval_bird_attnDCGAN2.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'attn2-dcgan'
 
 DATASET_NAME: 'birds'
-DATA_DIR: '../data/birds'
+DATA_DIR: 'data/birds'
 GPU_ID: 3
 WORKERS: 1
 
@@ -12,10 +12,10 @@ TREE:
 
 TRAIN:
     FLAG: False
-    NET_G: '../models/bird_AttnDCGAN2.pth'
+    NET_G: 'models/bird_AttnDCGAN2.pth'
     B_NET_D: False
     BATCH_SIZE: 100
-    NET_E: '../DAMSMencoders/bird/text_encoder200.pth'
+    NET_E: 'DAMSMencoders/bird/text_encoder200.pth'
 
 
 GAN:
