--- a/cfg/coco/coco_attn2.yml
+++ b/cfg/coco/coco_attn2.yml
@@ -1,7 +1,7 @@
-CONFIG_NAME: 'glu-gan2'
+dataset: {type: string, default: "birds"}CONFIG_NAME: 'glu-gan2'
 
 DATASET_NAME: 'coco'
-DATA_DIR: '../data/coco'
+DATA_DIR: 'data/coco'
 GPU_ID: 0
 WORKERS: 4
 
@@ -20,7 +20,7 @@ TRAIN:
     DISCRIMINATOR_LR: 0.0002
     GENERATOR_LR: 0.0002
     #
-    NET_E: '../DAMSMencoders/coco/text_encoder100.pth'
+    NET_E: 'DAMSMencoders/coco/text_encoder100.pth'
     SMOOTH:
         GAMMA1: 4.0  # 1,2,5 good 4 best  10&100bad
         GAMMA2: 5.0
