--- a/cfg/coco/eval_coco.yml
+++ b/cfg/coco/eval_coco.yml
@@ -1,7 +1,7 @@
 CONFIG_NAME: 'attn2'
 
 DATASET_NAME: 'coco'
-DATA_DIR: '../data/coco'
+DATA_DIR: 'data/coco'
 GPU_ID: 3
 WORKERS: 1
 
@@ -12,10 +12,10 @@ TREE:
 
 TRAIN:
     FLAG: False
-    NET_G: '../models/coco_AttnGAN2.pth'
+    NET_G: 'models/coco_AttnGAN2.pth'
     B_NET_D: False
     BATCH_SIZE: 10
-    NET_E: '../DAMSMencoders/coco/text_encoder100.pth'
+    NET_E: 'DAMSMencoders/coco/text_encoder100.pth'
 
 
 GAN:
